# TinaCarRecgnize

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/tina/com/recgnize/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CarColorPlateLocation.cpp  CarColorPlateLocation.h  CarPlateRecgnize.cpp  CarRecgnize.cpp  native-lib.cpp
app/src/main/java/tina/com/camera/: Camera2Helper.kt  CameraActivity2.kt
app/src/main/java/tina/com/recgnize/: MainActivity.java  MyApplication.java  Utils.java
app/src/main/java/tina/com/util/: BitmapUtils.kt  FileUtil.kt  Util.kt
app/src/main/java/tina/com/view/: AutoFitTextureView.java  FaceView.kt
app/src/main/res/layout/: activity_camera2.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/tina/com/recgnize/: ExampleUnitTest.java
